2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* gconf-property-editor.c: (peditor_color_value_changed),
	(peditor_color_widget_changed), (gconf_peditor_new_color):
	patch by Kevin Bauder <kevin.bauder@gmail.com>,
	"Replaced deprecated GnomeColorPicker with GtkColorButton."
	(Closes: #171680)

2006-07-05  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am, added DBUS_LIBS, closing #346442

2006-06-23  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am, activate-settings-daemon.c: g-s-d activation is based
	on DBUS now.

2006-03-29  Arjan Timmerman <arjani@soulfly.nl>

	Fixes #334153

	* activate-settings-daemon.c (activate_settings_daemon): fixed leaked
	CORBA_environment and removed extra if statement.

2006-03-23  Rodrigo Moya <rodrigo@novell.com>

	* activate-settings-daemon.c (popup_error_message): use gtk_dialog_run,
	we want the dialog to show up for more than less than a second.

2006-01-23  Thomas Wood  <thos@gnome.org>

	* file-transfer-dialog.c: (create_titled_label): Prevent a
	Gtk-CRITICAL error

2006-01-22  Rodrigo Moya <rodrigo@novell.com>

	Fixes #168790

	* capplet-stock-icons.c (capplet_register_stock_icons): don't use
	"capplet" in user-visible strings.

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* capplet-stock-icons.c: (capplet_register_stock_icons): Remove
	unused variable.
	* file-transfer-dialog.c: (file_transfer_dialog_update_num_files):
	Fix format specifiers.
	* gconf-property-editor.c: Mark some functions static.
	* gnome-theme-info.c: (top_theme_dir_changed),
	(top_icon_theme_dir_changed): Remove unused code.

2005-10-11  Muktha  <muktha.narayan@wipro.com>

	* gnome-theme-info.h:
	* gnome-theme-info.c (gnome_theme_read_meta_theme)
	(gnome_theme_meta_info_free) (gnome_theme_meta_info_print)
	(gnome_theme_meta_info_compare): Update the desktop font in 
	addition to the application font when 'apply font' in large print
	themes is selected. Fixes #123551.
 
2005-08-14  Rodney Dawes  <dobey@novell.com>
