@@ -1,3 +1,10 @@
+2006-08-17  Thomas Wood  <thos@gnome.org>
+
+	* capplets/common/theme-thumbnail.c: (fake_expose_widget),
+	(hbox_foreach), (create_image): Modified patch from bug 351378.
+	Fixes bug 351378 and bug 171634.
+
+
 2006-07-23  Sebastien Bacher  <seb128@debian.org>
 
 	* gconf-property-editor.c: (peditor_color_value_changed),
